platform/prometheus-stack/ingress/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring

spec:
  rules:
    - host: grafana.localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-grafana
              port:
                number: 80
