platform/prometheus-stack/ingress/promettheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    gethomepage.dev/description: Prometheus Monitoring and Alerting System
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/webp/prometheus.webp
    gethomepage.dev/name: Prometheus

spec:
  rules:
    - host: prometheus.localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-kube-prom-prometheus
              port:
                number: 9090
